dynamic cars card

--- a/v1/themes/hugo-universal-theme/layouts/_default/list.html
+++ b/v1/themes/hugo-universal-theme/layouts/_default/list.html
@@ -22,11 +22,15 @@
             <article>
                 {{ with .Content }}{{ . }}{{ end }}
             </article>
-            
             <!-- you can add an if condition here that import a slideshow partial for example depending on what layout you want, 
             so it modifies this default list template. It will always default to this for any content folder... 
             i dont know if there is a workaround other than this-->
+            <!-- if cars then import partial called cars.html-->
+            {{ if eq .Section "cars" }}
+            {{ partial "cars.html" . }}
+            {{ end }}
 
+            {{ if eq .Section "blog" }}
                 <div class="row">
                     <!-- *** LEFT COLUMN *** -->
 
@@ -123,9 +127,9 @@
                 <!-- /.row -->
             </div>
             <!-- /.container -->
+            {{ end }}
         </div>
         <!-- /#content -->
-
         {{ partial "footer.html" . }}
 
     </div>
