--- a/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
@@ -35,7 +35,7 @@
                         <div class="col-xs-12">
                             <div>
                                 <p>
-                                    {{.Params.Content}}
+                                    {{.Content}}
                                 </p>
                             </div>
                         </div>
