--- a/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
@@ -1,72 +1,102 @@
-<div class="container" id="cars">
-    <section class="bar background-white">
-        <div>
-            <div class="car">
-                <div class="col-sm-6">
-                    <div class="car-img">
-                        {{ if isset .Params "thumbnail" }}
-                        <img src="{{  replace .Params.thumbnail "/v1/static" "" | relURL }}" class="img-responsive" alt="" >
-                        {{ else }}
-                        <img src="{{ "img/car-coming-soon-front.png" | relURL }}" class="img-responsive" alt="">
-                        {{ end }}
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="car-info">
-                        <h2>{{.Params.name}}</h2>
-                        <span>{{.Params.year}}</span>
-                        <span>{{.Params.class}}</span>
-                    </div>
-                    <div class="properties row">
-                        <div class="col-xs-6">
-                            <div>
-                                <h4>Max Speed</h4>
-                                <span>{{.Params.maxSpeed}}</span> Km/H
-                            </div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div>
-                                <h4>Distance / Liter</h4>
-                                <span>{{.Params.distancePerLiter}}</span> M
-                            </div>
-                        </div>
-                    </div>
-                    <div class="description row">
-                        <div class="col-xs-12">
-                            <div>
-                                <p>
-                                    {{.Content}}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="car-achievements">
-                    <h3>Car Achievements</h3>
-                    <div>
-                        <div>
-                            <!-- Styled list of achievments card with thumbnail-->
-                            <div class="col-xs-6">
-                                {{ range .Params.achievements }}
-                                <div>
-                                    <!-- Note: this is an array of achievements by the way-->
-                                    <!-- TODO please add image here and finish the achievements bar with all its data-->
-                                    <!-- <div class="image">
-                                        {{ if isset .Params "thumbnail" }}
-                                        <img src="{{ .Params.thumbnail | relURL }}" class="img-responsive" alt="" style="height: max-content=200px;"  >
-                                        {{ else }}
-                                        <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="" style="height: max-content=200px;" >
-                                        {{ end }}
-                                    </div> -->
-                                    <h4>{{.achievement}}</h4>
-                                    <span>{{.year}}</span>
 
-                                </div>
-                                {{ end }}
-                        </div>
+<div>
+    <div class="car">
+        <div class="col-sm-6">
+            <div class="car-img">
+                {{ if isset .Params "thumbnail" }}
+                <img src="{{  replace .Params.thumbnail "/v1/static" "" | relURL }}" alt="" >
+                {{ else }}
+                <img src="{{ "img/car-coming-soon-front.png" | relURL }}" alt="">
+                {{ end }}
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="car-info">
+                <h2>{{.Params.name}}</h2>
+                <span>{{.Params.year}}</span>
+                <span>{{.Params.class}}</span>
+            </div>
+            <div class="properties row">
+                <div class="col-xs-6">
+                    <div>
+                        <h4>Max Speed</h4>
+                        <span>{{.Params.maxSpeed}}</span> Km/H
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div>
+                        <h4>Distance / Liter</h4>
+                        <span>{{.Params.distancePerLiter}}</span> M
+                    </div>
+                </div>
+            </div>
+            <div class="description row">
+                <div class="col-xs-12">
+                    <div>
+                        <p>
+                            {{.Content}}
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    <div class="car-achievements col-xs-12">
+        <h3>Car Achievements</h3>
+        <div class="row">
+            {{ range .Params.achievements }}
+            <div class="col-sm-4">
+                <div class="achievement-image">
+                    {{ if isset .achievements "image" }}
+                    <img src="{{  replace .achievements.image "/v1/static" "" | relURL }}" class="img-responsive" alt="">
+                    {{ else }}
+                    <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="">
+                    {{ end }}
+                </div>
+                <div class="car-achievements-info">
+                    <div>
+                        {{ if eq .icon "🏆 Trophy" }}
+                        <img src="{{ "img/trophy.png" | relURL }}" class="img-responsive" alt="">
+                        {{ else if eq .icon "🥇 First" }}
+                        <img src="{{ "img/first.png" | relURL }}" class="img-responsive" alt="">
+                        {{ else if eq .icon "🥈 Second" }}
+                        <img src="{{ "img/second.png" | relURL }}" class="img-responsive" alt="">
+                        {{ else if eq .icon "🥉 Third" }}
+                        <img src="{{ "img/third.png" | relURL }}" class="img-responsive" alt="">
+                        {{ else }}
+                        <img src="{{ "img/star.png" | relURL }}" class="img-responsive" alt="">
+                        {{ end }}
+                    </div>
+                    <div>
+                        <h5><a href="">{{.achievement}}</a></h5>
+                        <span>{{.year}}</span>
+                    </div>
+                </div>
+            </div>
+            {{ end }}
+        </div>
+        <!--<div>
+            <div>
+                 Styled list of achievments card with thumbnail
+                <div class="col-xs-6">
+                    {{ range .Params.achievements }}
+                    <div>
+                        Note: this is an array of achievements by the way-->
+                        <!-- TODO please add image here and finish the achievements bar with all its data-->
+                        <!-- <div class="image">
+                            {{ if isset .Params "thumbnail" }}
+                            <img src="{{ .Params.thumbnail | relURL }}" class="img-responsive" alt="" style="height: max-content=200px;"  >
+                            {{ else }}
+                            <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="" style="height: max-content=200px;" >
+                            {{ end }}
+                        </div> 
+                        <h4>{{.achievement}}</h4>
+                        <span>{{.year}}</span>
+
+                    </div>
+                    {{ end }}
+            </div>
+        </div>
+        -->
+    </div>
 </div>
