--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -752,7 +752,7 @@ fieldset[disabled] .btn-template-primary.active {
   background-size: cover;
 }
 #intro .item {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
   height: 100%;
 }
 #intro .item h1 {
@@ -950,7 +950,7 @@ fieldset[disabled] .btn-template-primary.active {
   letter-spacing: 0.08em;
 }
 .panel.sidebar-menu ul.nav.category-menu li a {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
 }
 .panel.sidebar-menu ul.nav ul {
   list-style: none;
@@ -1093,7 +1093,7 @@ fieldset[disabled] .btn-template-primary.active {
   margin: 30px 10px 10px -71px;
   color: #fff;
   background-color: var(--primary-accent);
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
 }
 .ribbon .theribbon:before,
 .ribbon .theribbon:after {
@@ -1346,7 +1346,7 @@ fieldset[disabled] .btn-template-primary.active {
   /* float: right; */
   width: 100%;
   border-radius: 4px;
-  box-shadow: 5px 5px 10px rgba(55, 84, 170, 0.06), -5px -5px 10px rgba(55, 78, 170, 0.06);
+  box-shadow: 0 0 10px rgba(55, 84, 170, 0.04);
   display: block;
   height: 290px;
   object-fit: cover;
@@ -1608,7 +1608,6 @@ fieldset[disabled] .btn-template-primary.active {
 }
 .box-image-text {
   position: relative;
-  overflow: hidden;
   text-align: center;
   margin: 15px 0;
   background: #fff;
@@ -2247,7 +2246,7 @@ fieldset[disabled] .btn-template-primary.active {
   font-size: 12px;
 }
 #blog-post .comment .reply {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
 }
 #blog-post .comment.last {
   margin-bottom: 0;
@@ -2399,7 +2398,7 @@ fieldset[disabled] .btn-template-primary.active {
   color: #555555;
   text-align: center;
   text-decoration: none;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
 }
 #productMain .sizes a.active,
 #productMain .sizes a:hover {
@@ -3315,7 +3314,7 @@ hr {
 }
 /* labels */
 .label {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.08em;
@@ -3345,7 +3344,7 @@ label {
   padding-top: 20px;
   text-transform: uppercase;
   letter-spacing: 0.08em;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
 }
 .pager li {
   display: inline;
@@ -3373,7 +3372,7 @@ label {
 /* pagination */
 .pagination {
   margin: 20px 0;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Sen", Helvetica, Arial, sans-serif;
   border-radius: 0;
 }
 .pagination > li > a,
@@ -3791,8 +3790,8 @@ a.list-group-item.active > .badge,
 
 #cars .car-achievements .achievement-image img {
   border-radius: 4px;
-  box-shadow: 5px 5px 10px rgba(55, 84, 170, 0.06), -5px -5px 10px rgba(55, 78, 170, 0.06);
+  box-shadow: 0 0 10px rgba(55, 84, 170, 0.04);
   padding: 4px;
-  max-height: 160px; 
+  height: 160px; 
   object-fit: cover;
 }
