--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -1,5 +1,6 @@
 <section class="no-mb" style="height: 100vh;">
     <div class="home-carousel">
+        {{ partial "carousel.html" . }}
         <div class="dark-mask"></div>
         <div class="container">
             <div class="row">
