--- a/v1/themes/hugo-universal-theme/layouts/partials/carousel.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/carousel.html
@@ -1,38 +1,19 @@
 {{ if default true .Site.Params.CarouselHomepage.enable }}
 {{ if isset .Site.Data "carousel" }}
 {{ if gt (len .Site.Data.carousel) 0 }}
-<section style="height: 100vh;">
-    <div class="home-carousel">
-        <div class="dark-mask"></div>
-        <div class="container">
-            <div class="homepage owl-carousel"
-                data-autoplay="{{ default true .Site.Params.CarouselHomepage.auto_play }}"
-                data-slide-speed="{{ default 2000 .Site.Params.CarouselHomepage.slide_speed }}"
-                data-pagination-speed="{{ default 1000 .Site.Params.CarouselHomepage.pagination_speed }}">
-                {{ range sort .Site.Data.carousel "weight" }}
-                <div class="item">
-                    {{ if .href }}
-                    <a href="{{ .href }}" target="_blank" title="{{ .title | safeHTML }}">
-                    {{ end }}
-                        <div class="row">
-                            <div class="col-sm-7">
-                                <img class="img-responsive" src="{{ .image }}" alt="">
-                            </div>
-                            <div class="col-sm-6">
-                                <h1>{{ .title | safeHTML }}</h1>
-                                {{ .description | safeHTML }}
-                            </div>
-                        </div>
-                    {{ if .href }}
-                    </a>
-                    {{ end }}
-                </div>
-                {{ end }}
-            </div>
-            <!-- /.project owl-slider -->
+<div class="background-carousel">
+    <div class="homepage owl-carousel"
+        data-autoplay="{{ default true .Site.Params.CarouselHomepage.auto_play }}"
+        data-slide-speed="{{ default 2000 .Site.Params.CarouselHomepage.slide_speed }}"
+        data-pagination-speed="{{ default 1000 .Site.Params.CarouselHomepage.pagination_speed }}">
+        {{ range sort .Site.Data.carousel "weight" }}
+        <div class="item">
+            <img class="img-responsive" src="{{ .image }}" alt="">
         </div>
+        {{ end }}
     </div>
-</section>
+</div>
+<!-- /.project owl-slider -->
 {{ end }}
 {{ end }}
 {{ end }}
