--- a/v1/themes/hugo-universal-theme/static/css/owl.carousel.css
+++ b/v1/themes/hugo-universal-theme/static/css/owl.carousel.css
@@ -24,6 +24,11 @@
 	position: relative;
 	-webkit-transform: translate3d(0px, 0px, 0px);
 }
+.owl-carousel .owl-wrapper {
+	display: flex !important; /* To override display:block I added !important */
+	flex-direction: row;
+	align-items: center; /* To center the carousel */
+  }
 .owl-carousel .owl-wrapper-outer{
 	overflow: hidden;
 	position: relative;
