--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -5,8 +5,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>The top eco-racing team in the MENA region</h1>
-                    <p>The 1st team from Cairo University to participate in the Shell Eco-Marathon competition that aims at driving greenly powered cars.</p>
+                    <h1>The top <strong style="color: rgb(129, 213, 192);">  eco-racing</strong> team in the MENA region.</h1>
+                    <p>Join Cairo University's team as they race toward a greener future at the prestigious Shell Eco-Marathon. Discover their mission to redefine eco-friendly automotive technology through innovative, green-powered car designs.</p>
                 </div>
             </div>
         </div>
