--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -1138,8 +1138,8 @@ fieldset[disabled] .btn-template-primary.active {
 .owl-theme .owl-controls.clickable .owl-page:hover span {
   background: var(--primary-accent);
 }
-.owl-carousel .owl-controls .owl-buttons,
-.owl-theme .owl-controls .owl-buttons {
+.customers .owl-carousel .owl-controls .owl-buttons,
+.customers .owl-theme .owl-controls .owl-buttons {
   position: absolute;
   z-index: 10;
   top: 95px;
@@ -1148,13 +1148,22 @@ fieldset[disabled] .btn-template-primary.active {
   display: flex;
   justify-content: space-between;
 }
+
+#cars .owl-carousel .owl-controls .owl-buttons > div{
+  background: var(--primary-accent);
+  color: #fff;
+  border-radius: 2px;
+  font-size: 18px;
+  text-align: center;
+  padding: 3px 6px;
+  margin: 0 3px;
+}
 .owl-carousel .owl-controls .owl-buttons div,
 .owl-theme .owl-controls .owl-buttons div {
   width: 28px;
   height: 28px;
   font-size: 22px;
   color: var(--primary-accent);
-  /* padding: 5px; */
   opacity: 1;
   filter: alpha(opacity=100);
 }
@@ -1370,7 +1379,7 @@ fieldset[disabled] .btn-template-primary.active {
   /* float: right; */
   width: 100%;
   border-radius: 4px;
-  box-shadow: 0 0 10px rgba(55, 84, 170, 0.04);
+  box-shadow: 0 0 10px rgba(55, 84, 170, 0.1);
   display: block;
   height: 290px;
   object-fit: cover;
@@ -3681,7 +3690,7 @@ a.list-group-item.active > .badge,
 }
 
 #cars .bar .car-achievements {
-  margin-bottom: 140px;
+  margin-bottom: 60px;
 }
 
 #cars .properties {
@@ -3706,11 +3715,11 @@ a.list-group-item.active > .badge,
 }
 
 @media (max-width: 768px) {
-  .customers .item img {
-    padding: 0 55px;
-  }
   #cars .car-img {
     margin-bottom: 40px;
+  }
+  #cars .bar .car-achievements {
+    margin-bottom: 10px;
   }
   #cars .car-achievements .row > div {
     margin-bottom: 20px;
@@ -3738,16 +3747,6 @@ a.list-group-item.active > .badge,
 
 #cars img {
   width: 100%;
-}
-
-#cars .bar > div:nth-of-type(even) .car {
-  flex-direction: row-reverse;
-}
-
-#cars .bar > div:nth-of-type(even) .car-img::after {
-  transform: skewX(350deg);
-  left: auto;
-  right: 24px;
 }
 
 #cars h4, #cars h5 {
@@ -3817,7 +3816,7 @@ a.list-group-item.active > .badge,
 
 #cars .car-achievements .achievement-image img {
   border-radius: 4px;
-  box-shadow: 0 0 10px rgba(55, 84, 170, 0.04);
+  box-shadow: 0 0 10px rgba(55, 84, 170, 0.1);
   padding: 4px;
   height: 160px; 
   object-fit: cover;
