--- a/v1/themes/hugo-universal-theme/layouts/partials/cars.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars.html
@@ -1,4 +1,4 @@
-<div class="container" id="cars">
+<div class="container row" id="cars">
     <section class="bar background-white">
         <div class="cars-carousal owl-carousel"
         data-autoplay="false"
