--- a/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div class="car-achievements">
+    <div class="car-achievements col-xs-12">
         <h3>Car Achievements</h3>
         <div class="row">
             {{ range .Params.achievements }}
