--- a/v1/themes/hugo-universal-theme/layouts/partials/recent_posts.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/recent_posts.html
@@ -23,7 +23,7 @@
                         <div class="top">
                             <div class="image">
                                 {{ if isset .Params "banner" }}
-                                <img src="{{ .Params.banner | relURL }}" class="img-responsive" alt="" >
+                                <img src="{{ replace .Params.banner "/v1/static" "" | relURL }}" class="img-responsive" alt="" >
                                 {{ else }}
                                 <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="">
                                 {{ end }}
