--- a/v1/themes/hugo-universal-theme/layouts/_default/list.html
+++ b/v1/themes/hugo-universal-theme/layouts/_default/list.html
@@ -43,8 +43,8 @@
                                 <div class="col-md-4">
                                   <div class="image">
                                       <a href="{{ .Permalink }}">
-                                          {{ if .Params.banner }}
-                                          <img src="{{ .Params.banner | relURL }}" class="img-responsive" alt="">
+                                          {{ if .Params.thumbnail }}
+                                          <img src="{{ .Params.thumbnail | relURL }}" class="img-responsive" alt="">
                                           {{ else }}
                                           <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="">
                                           {{ end }}
