add sorting weight to achievements

--- a/v1/themes/hugo-universal-theme/layouts/partials/testimonials.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/testimonials.html
@@ -21,7 +21,7 @@
                     data-autoplay="{{ default false .Site.Params.CarouselTestimonials.auto_play }}"
                     data-slide-speed="{{ default 2000 .Site.Params.CarouselTestimonials.slide_speed }}"
                     data-pagination-speed="{{ default 1000 .Site.Params.CarouselTestimonials.pagination_speed }}">
-                    {{ range .Site.Data.testimonials }}
+                    {{ range sort .Site.Data.testimonials "weight" }}
                     <li class="item">
                         <div class="testimonial same-height-always">
                             <div class="bottom">
