--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1>The top <strong style="color: #21a99f;">  eco-racing</strong> team in the MENA region.</h1>
-                    <p>Join Cairo University's team as they race toward a greener future at the prestigious Shell Eco-Marathon. Discover their mission to redefine eco-friendly automotive technology through innovative, green-powered car designs.</p>
+                    <p>Join us in shaping a greener and more sustainable future through the power of innovation.</p>
                 </div>
             </div>
         </div>
