--- a/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
@@ -26,7 +26,7 @@
                 <div class="col-xs-6">
                     <div>
                         <h4>Distance / Liter</h4>
-                        <span>{{.Params.distancePerLiter}}</span> M
+                        <span>{{.Params.distancePerLiter}}</span> Km
                     </div>
                 </div>
             </div>
