--- a/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/cars_card.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-xs-6">
                     <div>
-                        <h4>Distance / KWh</h4>
+                        <h4>{{.Params.unit}}</h4>
                         <span>{{.Params.distancePerLiter}}</span> Km
                     </div>
                 </div>
