--- a/v1/themes/hugo-universal-theme/layouts/_default/list.html
+++ b/v1/themes/hugo-universal-theme/layouts/_default/list.html
@@ -29,6 +29,10 @@
             {{ if eq .Section "cars" }}
             {{ partial "cars.html" . }}
             {{ end }}
+            <!-- if team-members then import partial called team-members.html-->
+            {{ if eq .Section "team-members" }}
+            {{ partial "team-members.html" . }}
+            {{ end }}
 
             {{ if eq .Section "blog" }}
                 <div class="row">
