--- a/v1/themes/hugo-universal-theme/layouts/partials/headers.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/headers.html
@@ -25,6 +25,9 @@
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<!-- Swiper CSS used in Team Members page -->
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
 <!-- CSS animations  -->
 <link href="{{ "css/animate.css" | relURL }}" rel="stylesheet">
 
@@ -33,6 +36,9 @@
 
 <!-- Custom stylesheet - for your changes -->
 <link href="{{ "css/custom.css" | relURL }}?{{ now.Unix }}" rel="stylesheet">
+
+<!-- Team Members custom sylesheet -->
+<link href="{{ "css/team-members.css" | relURL }}" rel="stylesheet">
 
 <!-- Responsivity for older IE -->
 {{ `
