add team members js files

--- a/v1/themes/hugo-universal-theme/layouts/partials/scripts.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/scripts.html
@@ -19,3 +19,8 @@
 <!-- owl carousel -->
 <script src="{{ "js/owl.carousel.min.js" | relURL }}"></script>
 
+<!-- Team Members page js -->
+<!-- Include Swiper JS used in Team Members page -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="{{ "js/team-members.js" | relURL }}"></script>
+
