read team members data dynamically from md pages

--- a/v1/themes/hugo-universal-theme/static/css/team-members.css
+++ b/v1/themes/hugo-universal-theme/static/css/team-members.css
@@ -213,7 +213,7 @@ button:hover {
 
 /* start of sub team description */
 
-.sub-team-p {
+.sub-team-p > p {
     color: #555;
     text-align: center;
     font-family: "Sen", Arial, Helvetica, sans-serif;
