--- a/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
@@ -1,8 +1,7 @@
 <div>
   
   <div class="cover-image">
-    <!-- TODO: Change the src of the cover img -->
-    <img src="/img/placeholder.png" alt="cover" />
+    <img src="/img/cover.jpg" alt="cover" />
   </div>
   <h1 class="main-heading heading">Meet Our Sub-Teams</h1>
   
