--- a/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
@@ -4,21 +4,131 @@
     <img src="/img/cover.jpg" alt="cover" />
   </div>
 
+  <h1 class="main-heading heading">Meet Our Board of Directors</h1>
+
+  <!-- Board of Directors is a team but it has a flag "isDirectorsBoard" -->
+  {{ $posts := .Paginate (where site.RegularPages "Type" "eq" "team-members") }}
+  {{ range $posts.Pages }}
+  {{ if eq .Params.isDirectorsBoard true }}
+    <div id="{{ .Params.team }}">
+
+      <div class="head-card">
+        <h3 class="head-card-title">President</h3>
+        <div class="head-card-img-div">
+          <img src="{{ .Params.head.image }}" alt="head-img" />
+        </div>
+        <p class="head-card-name">{{ .Params.head.name }}</p>
+        <ul class="icons-list">
+          {{ if isset .Params.head "email" }}
+            <li class="icons-list-item">
+              <a href="mailto:{{ .Params.head.email }}">
+                <i class="fas fa-envelope"></i></a>
+            </li>
+          {{ end }}
+          {{ if isset .Params.head "linkedin" }}
+            <li class="icons-list-item">
+              <a href="{{ .Params.head.linkedin }}" target="_blank">
+                <i class="fab fa-linkedin-in"></i></a>
+            </li>
+          {{ end }}
+          {{ if isset .Params.head "github" }}
+            <li class="icons-list-item">
+              <a href="{{ .Params.head.github }}" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+          {{ end }}
+          {{ if isset .Params.head "facebook" }}
+            <li class="icons-list-item">
+              <a href="{{ .Params.head.facebook }}" target="_blank">
+                <i class="fab fa-facebook-f"></i></a>
+            </li>
+          {{ end }}
+        </ul>
+      </div>
+
+      <div class="head-card-title">Directors</div>
+      
+
+      <!-- start slider -->
+      <div class="center-slider">
+        <div class="slide-container swiper">
+          <div class="slide-content">
+            <div class="card-wrapper swiper-wrapper">
+              {{ range .Params.members }}
+              <div class="member-card swiper-slide">
+                <div class="image-content">
+                  <div class="member-card-image">
+                    <img src="{{ .image }}" alt="member-img" class="member-card-img" />
+                  </div>
+                </div>
+
+                <div class="member-card-content">
+                  <h4 class="member-name">{{ .name }}</h4>
+                  <p class="member-role">{{ .role }}</p>
+                  <ul class="icons-list">
+                    {{ if isset . "email" }}
+                      <li class="icons-list-item">
+                        <a href="mailto:{{ .email }}"><i class="fas fa-envelope"></i></a>
+                      </li>
+                    {{ end }}
+                    {{ if isset . "linkedin" }}
+                      <li class="icons-list-item">
+                        <a href="{{ .linkedin }}" target="_blank">
+                          <i class="fab fa-linkedin-in"></i></a>
+                        </a>
+                      </li>
+                    {{ end }}
+                    {{ if isset . "github" }}
+                      <li class="icons-list-item">
+                        <a href="{{ .github }}" target="_blank">
+                          <i class="fab fa-github"></i>
+                        </a>
+                      </li>
+                    {{ end }}
+                    {{ if isset . "facebook" }}
+                      <li class="icons-list-item">
+                        <a href="{{ .facebook }}" target="_blank">
+                          <i class="fab fa-facebook-f"></i></a>
+                        </a>
+                      </li>
+                    {{ end }}
+                  </ul>
+                </div>
+              </div>
+              {{ end }}
+            </div>
+          </div>
+          <div class="swiper-button-next swiper-navBtn"></div>
+          <div class="swiper-button-prev swiper-navBtn"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+    {{ end }}
+  {{ end }}
+
+
 
   <h1 class="main-heading heading">Meet Our Sub-Teams</h1>
   
   <div class="button-teams">
     {{ $posts := .Paginate (where site.RegularPages "Type" "eq" "team-members") }}
     {{ range $posts.Pages }}
+    {{ if or (eq .Params.isDirectorsBoard nil) (eq .Params.isDirectorsBoard false) }}
       <button class="team-button" id="{{ .Params.team }}"> {{ .Params.team }} Team </button>
+    {{ end }}
     {{ end }}
   </div>
   <!-- starting of define teams -->
 
   {{ range $posts.Pages }}
+  {{ if or (eq .Params.isDirectorsBoard nil) (eq .Params.isDirectorsBoard false) }}
+
     <div id="{{ .Params.team }}" class="hide sub-team">
       <h2 class="sub-heading heading"> {{ .Params.team }} Sub-team</h2>
       <div class="sub-team-p">
+        {{ .Params.isDirectorsBoard }}
         {{ .Content }}
       </div>
 
@@ -115,7 +225,7 @@
         </div>
       </div>
     </div>
-
+  {{ end }}
   {{ end }}
 
 </div>
