--- a/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
@@ -13,7 +13,7 @@
     <div id="{{ .Params.team }}">
 
       <div class="head-card">
-        <h3 class="head-card-title">President</h3>
+        <h3 class="head-card-title">Racing Team Manager</h3>
         <div class="head-card-img-div">
           <img src="{{ .Params.head.image }}" alt="head-img" />
         </div>
