--- a/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/team-members.html
@@ -1,8 +1,8 @@
 <div>
   
-  <div class="cover-image">
+<!--   <div class="cover-image">
     <img src="/img/cover.jpg" alt="cover" />
-  </div>
+  </div> -->
 
   <h1 class="main-heading heading">Meet Our Board of Directors</h1>
 
